--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "mongoose": "^5.10.15",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
