--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "bcryptjs": "^2.4.3",
     "isomorphic-unfetch": "^3.1.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "next": "10.0.1",
+    "nookies": "^2.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
