--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "bcryptjs": "^2.4.3",
+    "formik": "^2.2.5",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -18,6 +20,7 @@
     "next": "10.0.1",
     "nookies": "^2.5.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "yup": "^0.31.0"
   }
 }
