--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "next": "10.0.1",
+    "nodemailer": "^6.4.16",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemailer-sendinblue-transport": "^1.2.3",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nookies": "^2.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
