--- a/package.json
+++ b/package.json
@@ -11,20 +11,33 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "formik": "^2.2.5",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "next": "10.0.1",
+    "next": "^10.0.7",
     "nodemailer": "^6.4.16",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemailer-sendinblue-transport": "^1.2.3",
     "nodemailer-smtp-transport": "^2.7.4",
     "nookies": "^2.5.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^8.132.0",
+    "swr": "^0.4.2",
+    "uuid": "^8.3.2",
     "yup": "^0.31.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
+    "@types/mongoose": "^5.10.3",
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
