--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "fast-deep-equal": "^3.1.3",
     "formik": "^2.2.5",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
