--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-stripe-checkout": "^2.6.3",
     "stripe": "^8.132.0",
     "swr": "^0.4.2",
