--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "nodemailer-smtp-transport": "^2.7.4",
     "nookies": "^2.5.0",
     "nprogress": "^0.2.0",
+    "rc-dropdown": "^3.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.1",
+    "react-slick": "^0.28.0",
     "react-stripe-checkout": "^2.6.3",
+    "slick-carousel": "^1.8.1",
     "stripe": "^8.132.0",
     "swr": "^0.4.2",
     "uuid": "^8.3.2",
