--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -31,6 +33,7 @@
     "react-dom": "17.0.1",
     "react-dropzone": "^11.3.1",
     "react-slick": "^0.28.0",
+    "react-spinners": "^0.10.6",
     "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1",
     "stripe": "^8.132.0",
