--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "khalti-checkout-web": "^2.2.0",
     "mongoose": "^5.10.15",
     "next": "^10.0.7",
     "nodemailer": "^6.4.16",
